Aktualisieren von style.css

--- a/docs/style.css
+++ b/docs/style.css
@@ -3,7 +3,7 @@ body {
     margin: none;
 }
 .subheader {
-    background-color: #EEE;
+    background-color: #F4F4F4;
     margin-left: none;
     margin-right: none;
 }
