Aktualisieren von style.css

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,11 @@
 body {
     font-family: Montserrat, sans-serif;
     margin: none;
+    color: #222;
 }
 .subheader {
     background-color: #F4F4F4;
     margin-left: none;
     margin-right: none;
+    color: #111;
 }
