Aktualisieren von style.css

--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,7 @@ body {
     color: #222;
 }
 div.subheader {
-    background-color: #F4F4F4;
+    background-color: #DFDFDF;
     margin-left: none;
     margin-right: none;
     color: #111;
